kubernetes/apps/flux-system/flux-operator/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator
spec:
  # Flux Operator -- reconciles the FluxInstance, which pulls the Flux
  # controller manifests from an OCI registry (world:443) and applies them via
  # the API server.
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: flux-system
      app.kubernetes.io/name: flux-operator
  ingress:
    # Prometheus scrapes operator metrics :8080
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: o11y
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # kubelet httpGet health probe :8081
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    # DNS resolution (L7 so lookups are visible to Cilium's DNS proxy)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Kubernetes API -- reconcile FluxInstance and apply controller manifests
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # OCI distribution of the Flux controller manifests/images
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Emit reconcile events to notification-controller (Svc :80 -> pod :9090)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
            app: notification-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
